@@ -165,6 +165,7 @@ Leonardo Serra
 Jim Seymour
 Joe Shaw
 Scott Shedden
+Ettore Simone
 John Silvestri
 Craig Slusher
 Alex Smith
